--- a/doc/clac_reference.tex
+++ b/doc/clac_reference.tex
@@ -16,8 +16,7 @@
 \setlength{\parindent}{0em}
 \setlength{\parskip}{1.75ex plus0.5ex minus0.5ex}
 
-% In case I want to change this later.
-\newcommand{\CLAC}{CLAC}
+\input{macros}
 
 % +++++++++++++++++++
 % The document itself
@@ -28,7 +27,7 @@
 % Title page information
 % ----------------------
 \title{\CLAC\ Reference Manual}
-\author{Peter Chapin\thanks{pchapin@ecet.vtc.edu}\\
+\author{Peter Chapin\thanks{PChapin@vtc.vsc.edu}\\
         Peter Nikolaidis\thanks{peter@paradigmcc.com}}
 \date{June 22, 2002}
 \maketitle
@@ -48,44 +47,36 @@
 
 \section{Overview}
 
-\CLAC\ is a general purpose scientific and engineering calculator
-program for Unix and Windows systems. \CLAC\ was inspired by the Hewlett
-Packard line of calculators. The HP- 48SX was particularly influential.
-However, \CLAC\ is not a true simulation of any existing hand held
-calculator. Not all of the abilities of, for example the HP-48SX, have
-been implemented. Furthermore, \CLAC\ offers features not found on any
-current hand held unit.
+\CLAC\ is a general purpose scientific and engineering calculator program for Unix and Windows
+systems. \CLAC\ was inspired by the Hewlett Packard line of calculators. The HP- 48SX was
+particularly influential. However, \CLAC\ is not a true simulation of any existing hand held
+calculator. Not all of the abilities of, for example the HP-48SX, have been implemented.
+Furthermore, \CLAC\ offers features not found on any current hand held unit.
 
 Some of \CLAC's nicer features include:
 
 \begin{enumerate}
   
-\item Operations can be performed on a variety of data types. Where it
-  is meaningful to do so, operations can easily be performed on mixed
-  data types.
+\item Operations can be performed on a variety of data types. Where it is meaningful to do so,
+  operations can easily be performed on mixed data types.
   
-\item A tree structured directory is maintained in memory where objects
-  of all types may be saved. The entire tree can be written to disk for
-  later retrieval.
+\item A tree structured directory is maintained in memory where objects of all types may be
+  saved. The entire tree can be written to disk for later retrieval.
 
 \item Individual objects can be saved on disk.
   
-\item Programs can be written in a FORTH-like language to extend the
-  functionality of \CLAC.
+\item Programs can be written in a FORTH-like language to extend the functionality of \CLAC.
 
 \end{enumerate}
 
-This document is a complete user reference manual for \CLAC. We assume
-that you are familiar with \CLAC's basic operation. In particular, we
-assume that you are comfortable with the stack oriented nature of \CLAC.
-In addition, we assume that you are familiar with operating system
-concepts such as pathnames, script files, and I/O redirection. If you
-are not familiar with \CLAC's basic operation, you should work through
-the tutorial document first.
+This document is a complete user reference manual for \CLAC. We assume that you are familiar
+with \CLAC's basic operation. In particular, we assume that you are comfortable with the stack
+oriented nature of \CLAC. In addition, we assume that you are familiar with operating system
+concepts such as pathnames, script files, and I/O redirection. If you are not familiar with
+\CLAC's basic operation, you should work through the tutorial document first.
 
-This document also assumes that you are familiar with the appropriate
-mathematical material. This document is not a tutorial, for example, on
-matrix algebra or complex numbers.
+This document also assumes that you are familiar with the appropriate mathematical material.
+This document is not a tutorial, for example, on matrix algebra or complex numbers.
 
 \section{Legal Note}
 
@@ -98,68 +89,60 @@ matrix algebra or complex numbers.
 % -------------
 \chapter{Entity Library}
 
-\CLAC\ manipulates several different types of objects. The effects of an
-operation varies from type to type. For example, the effect of
-multiplying two float objects is rather different than that of
-multiplying two matrix objects. Nevertheless, objects of differing types
-can coexist on \CLAC's primary stack, in \CLAC's directory, and in .CLC
-files.
+\CLAC\ manipulates several different types of objects. The effects of an operation varies from
+type to type. For example, the effect of multiplying two float objects is rather different than
+that of multiplying two matrix objects. Nevertheless, objects of differing types can coexist on
+\CLAC's primary stack, in \CLAC's directory, and in .CLC files.
 
-A complete list of all of \CLAC's object types, along with some of their
-basic properties follows.
+A complete list of all of \CLAC's object types, along with some of their basic properties
+follows.
 
 \section{Integer}
 
-Integer's are whole numbers which may be positive or negative. They are
-always displayed without a decimal point. \CLAC\ manages integers with
-arbitrary precision.
+Integer's are whole numbers which may be positive or negative. They are always displayed without
+a decimal point. \CLAC\ manages integers with arbitrary precision.
 
 \section{Rational}
 
-Rational numbers are fractions which may be positive or negative. They are
-always displayed as two integers separated by a `/' character. For example:
+Rational numbers are fractions which may be positive or negative. They are always displayed as
+two integers separated by a `/' character. For example:
 
 \begin{verbatim}
           -4/5
 \end{verbatim}
 
-\CLAC\ does not transform fractions into floating point numbers when
-simple operations are performed entirely with fractions. For example if
-$2/3 - 1/6$ is calculated, the result will be $1/2$, not $0.500$. \CLAC\ 
-always displays rationals in reduced form.
+\CLAC\ does not transform fractions into floating point numbers when simple operations are
+performed entirely with fractions. For example if $2/3 - 1/6$ is calculated, the result will be
+$1/2$, not $0.500$. \CLAC\ always displays rationals in reduced form.
 
-\CLAC\ manages the numerator and denominator of rational objects with
-arbitrary precision. It is possible for a rational to have, for example, a
-300 digit numerator and a 40,000 digit denominator.
+\CLAC\ manages the numerator and denominator of rational objects with arbitrary precision. It is
+possible for a rational to have, for example, a 300 digit numerator and a 40,000 digit
+denominator.
 
 \section{Float}
 
-Float numbers are signed numbers which contain a mantissa portion and an
-exponent portion. Although \CLAC\ offers several display modes for float
-numbers, a decimal point is always involved in the display. The range of
-float numbers is $-1.7\times 10^{307} \cdots -1.7\times 10^{-308}, 0.0,
-+1.7\times 10^{-308} \cdots +1.7\times 10^{+307}$.
+Float numbers are signed numbers which contain a mantissa portion and an exponent portion.
+Although \CLAC\ offers several display modes for float numbers, a decimal point is always
+involved in the display. The range of float numbers is $-1.7\times 10^{307} \cdots -1.7\times
+10^{-308}, 0.0, +1.7\times 10^{-308} \cdots +1.7\times 10^{+307}$.
 
-Notice that a float number can take on the ``exact'' value zero as a
-special case.
+Notice that a float number can take on the ``exact'' value zero as a special case.
 
 \CLAC\ manages float numbers with 16 decimal digits of precision.
 
 \section{Complex}
 
-Complex numbers are composed of two floating components. One of the
-components is the real part and the other component is the imaginary
-part. Complex numbers are always displayed inside of parenthesis. For
-example $(3.121, 6.774)$ means $3.121 + i 6.774$.
+Complex numbers are composed of two floating components. One of the components is the real part
+and the other component is the imaginary part. Complex numbers are always displayed inside of
+parenthesis. For example $(3.121, 6.774)$ means $3.121 + i 6.774$.
 
 \section{Binary}
 
-Binary numbers are specialized unsigned integers. \CLAC\ performs
-operations on binary numbers as if they contained exactly the number of
-bits you specify. Binary numbers may be displayed in several bases.
-However, a leading `\#' character is always used to identify the number
-as a binary. For example, assuming that you have selected a word size of
-16 bits, the following binary numbers are identical.
+Binary numbers are specialized unsigned integers. \CLAC\ performs operations on binary numbers
+as if they contained exactly the number of bits you specify. Binary numbers may be displayed in
+several bases. However, a leading `\#' character is always used to identify the number as a
+binary. For example, assuming that you have selected a word size of 16 bits, the following
+binary numbers are identical.
 
 \begin{tabbing}
 
@@ -170,49 +153,42 @@ as a binary. For example, assuming that you have selected a word size of
 
 \end{tabbing}
 
-If the calculation \#FFFEh + \#0003h is done, the result will be, for 16
-bit word size, \#0001h. Notice that the final carry is ignored.
+If the calculation \#FFFEh + \#0003h is done, the result will be, for 16 bit word size, \#0001h.
+Notice that the final carry is ignored.
 
 \section{String}
 
-Strings are sequences of characters enclosed in quotation marks. Any
-character except the quotation mark is allowed in a string. In most
-cases, \CLAC\ does not try to interpret the text of a string. Strings
-may be arbitrarly long.
+Strings are sequences of characters enclosed in quotation marks. Any character except the
+quotation mark is allowed in a string. In most cases, \CLAC\ does not try to interpret the text
+of a string. Strings may be arbitrarly long.
 
-Strings are used by \CLAC\ as variable names, filenames, and operating
-system commands. You may find them useful for storing arbitrary notes as
-well.
+Strings are used by \CLAC\ as variable names, filenames, and operating system commands. You may
+find them useful for storing arbitrary notes as well.
 
 \section{List}
 
-Lists are sequences of other calculator objects enclosed in $\{\ldots\}$
-pairs. The objects in the list are delimited by spaces. The objects in a
-list may be of any type---including other lists. For example, the
-following is a valid list:
+Lists are sequences of other calculator objects enclosed in $\{\ldots\}$ pairs. The objects in
+the list are delimited by spaces. The objects in a list may be of any type---including other
+lists. For example, the following is a valid list:
 
 \begin{verbatim}
           { 1 -7/8 2.33 (4.33, 6.55) # FFh "Hi" { 1 "Sublist" } }
 \end{verbatim}
 
-Lists are used by \CLAC\ primary as a means of grouping objects into a
-single object. This is useful when you want to store several objects
-into one directory entry, save several objects in one .CLC file, or pass
-several objects into a subprogram.
+Lists are used by \CLAC\ primary as a means of grouping objects into a single object. This is
+useful when you want to store several objects into one directory entry, save several objects in
+one .CLC file, or pass several objects into a subprogram.
 
-Lists have no limitation or their size or on the size or complexity of
-their elements.
+Lists have no limitation or their size or on the size or complexity of their elements.
 
 Notice that lists are ordered.
 
 \section{Matrix}
 
-Matrices are two dimensional arrays of other calculator objects. Each
-matrix is enclosed in $[\ldots]$ pairs and, if there is more than one
-row in the matrix, each row is also enclosed in $[\ldots]$ pairs. The
-objects in a matrix are delimited by spaces. The elements of a matrix
-may be of any type except other matrices. For example, the following are
-valid matrices:
+Matrices are two dimensional arrays of other calculator objects. Each matrix is enclosed in
+$[\ldots]$ pairs and, if there is more than one row in the matrix, each row is also enclosed in
+$[\ldots]$ pairs. The objects in a matrix are delimited by spaces. The elements of a matrix may
+be of any type except other matrices. For example, the following are valid matrices:
 
 \begin{verbatim}
           [ 1 -2/3 3.142 ]         A 1x3 matrix.
@@ -220,29 +196,24 @@ valid matrices:
           [ [ 1 2 3 ] [ 4 5 6 ] ]  A 2x3 matrix.
 \end{verbatim}
 
-The restriction on the types of the matrix elements is necessary to
-prevent ambiguity. For example, if matrices where allowed as matrix
-elements, the last example above could also be interpreted as a 1x2
-matrix of 1x3 matrices.
+The restriction on the types of the matrix elements is necessary to prevent ambiguity. For
+example, if matrices where allowed as matrix elements, the last example above could also be
+interpreted as a 1x2 matrix of 1x3 matrices.
 
-Matrices differ from lists in two important respects. First, matrices
-are two dimensional. Second, most operations have very different effects
-when applied to matrices or to lists. For example, adding two matrices
-is only allowed if their dimensions are compatible. In that case, the
-sum matrix is calculated by adding the corresponding matrix elements
-from the operands. In contrast, adding two lists simply forms a new list
-in which the elements of the first list are followed by the elements of
-the second list.
+Matrices differ from lists in two important respects. First, matrices are two dimensional.
+Second, most operations have very different effects when applied to matrices or to lists. For
+example, adding two matrices is only allowed if their dimensions are compatible. In that case,
+the sum matrix is calculated by adding the corresponding matrix elements from the operands. In
+contrast, adding two lists simply forms a new list in which the elements of the first list are
+followed by the elements of the second list.
 
-As with lists, \CLAC\ has no arbitrary limits on the dimensions of a
-matrix or on the size or complexity of the individual matrix elements.
-Notice that matrices of lists are possible (as are lists of matrices as
-well as matrices of lists of matrices, etc).
+As with lists, \CLAC\ has no arbitrary limits on the dimensions of a matrix or on the size or
+complexity of the individual matrix elements. Notice that matrices of lists are possible (as are
+lists of matrices as well as matrices of lists of matrices, etc).
 
-\CLAC\ uses matrices with a row (or column) dimension of one for
-vectors. \CLAC\ does not support a special vector type. Notice that
-transforming a row vector into a column vector can be done with the
-``trans'' (transpose) command.
+\CLAC\ uses matrices with a row (or column) dimension of one for vectors. \CLAC\ does not
+support a special vector type. Notice that transforming a row vector into a column vector can be
+done with the ``trans'' (transpose) command.
 
 
 % -------------
@@ -270,9 +241,8 @@ transforming a row vector into a column vector can be done with the
 % -------------
 \chapter{Unary Operations}
 
-\CLAC\ supports the following unary operators. All unary operators take
-their operand from stack level 1 and return their result to stack level
-1.
+\CLAC\ supports the following unary operators. All unary operators take their operand from stack
+level 1 and return their result to stack level 1.
 
 \begin{tabbing}
 \hspace*{3em}\=abs\hspace{3em}\=Absolute value\\
@@ -304,9 +274,9 @@ their operand from stack level 1 and return their result to stack level
 % -------------
 \chapter{Binary Operations}
 
-\CLAC\ supports the following binary operators. All binary operators
-take one operand, ``x,'' from stack level 1 and another operand, ``y,''
-from stack level 2. The operation returns its result to stack level 1.
+\CLAC\ supports the following binary operators. All binary operators take one operand, ``x,''
+from stack level 1 and another operand, ``y,'' from stack level 2. The operation returns its
+result to stack level 1.
 
 \begin{tabbing}
 \hspace*{3em}\=+\hspace{3em}\=$y + x$\\
